--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">StackOverflowTest</string>
     <string name="search">search</string>
+    <string name="no_result">No result</string>
+    <string name="ok">Ok</string>
 </resources>
