--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="ok">Ok</string>
     <string name="dialog_label">Warning</string>
     <string name="dialog_message">Something went wrong. Please try again later</string>
-    <string name="toast_error">This is the last search result. Ыervice or network is not available</string>
+    <string name="toast_error">This is the last search result. Service or network is not available</string>
 </resources>
